--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-load-image": "^0.1.7",
+    "react-loading-skeleton": "^1.1.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
